<resources>
    //title
    <string name="map">Theo Dõi Đơn Hàng</string>
    <string name="order">Đơn Hàng</string>
    <string name="store">Danh sách cửa hàng</string>
    <string name="guide">Hướng dẫn</string>
    <string name="policy"><![CDATA[Chính sách & Điều kiện]]></string>
    <string name="fanpage">Fanpage</string>
    <string name="answer">Câu hỏi hoặc đóng góp</string>
    <string name="logout">Đăng xuất</string>
    <string name="account">Tài khoản</string>
    <string name="confirm">Xác nhận</string>
    <string name="user_email_recover">Email khôi phục</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="user_login">Đăng nhập</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="hello_exlore_your_dream_food">Hello Exlore Your Dream Food</string>
    <string name="full_name">Full Name</string>
    <string name="register">Đăng ký</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="app_name">AppFood</string>
    <string name="home">Trang chủ</string>
    <string name="menu">Danh mục</string>
    <string name="introduce">Giới thệu chung</string>
    <string name="contact">Liên hệ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="checkout">Thanh toán</string>
    <string name="notify">Thông báo</string>
    <string name="introduce_info_top">Thông tin về nhà hàng</string>
    <string name="res_name">Nhà hàng Good Food</string>
    <string name="res_address">475A Điện Biên Phủ, P.25, Q.Bình Thạnh, TP.HCM</string>
    <string name="res_phone">0989 284 746</string>
    <string name="res_note">Góp ý, đóng góp và đánh giá</string>
    <string name="res_note_valid">Bạn chưa nhập lời nhắn!</string>

    <string name="continue_buy">Tiếp tục chọn món</string>
    <string name="buy">Chọn món</string>
    <string name="menu_detail_title">Chi tiết danh mục</string>
    <string name="food_detail_title">Chi tiết món</string>

    <string name="checkout_info">Thông tin thanh toán</string>
    <string name="user_name">Tên khách hàng</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Số điện thoại</string>
    <string name="user_note">Ghi chú</string>
    <string name="type_user_name">Nhập tên khách hàng</string>
    <string name="type_user_email">vd: appfood@gmail.com</string>
    <string name="type_user_phone">Nhập số điện thoại</string>
    <string name="type_user_note">Nhập lời nhắn...</string>

    /label button
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="payment">Thanh toán</string>
    <string name="payment_last">Thanh toán thôi!</string>
    <string name="to_Home">Về trang chủ</string>
    <string name="sent_mess">Gửi</string>
    <string name="total_price">Tổng cộng:</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>

    //thông báo!!!
    <string name="error_network">Không có Internet!</string>
    <string name="error_server">Không thể kết nối với Server!</string>
    <string name="empty_cart_notify">Giỏ hàng trống!</string>
    <string name="validation">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="none_name">Vui lòng nhập tên khách hàng!</string>
    <string name="none_email">Vui lòng nhập email!</string>
    <string name="none_phone">Vui lòng nhập số điện thoại!</string>
    <string name="invalid_email">Email chưa đúng định dạng!</string>
    <string name="overload_phone">Số điện thoại không được vượt quá</string>
    <string name="char_style">ký tự</string>

    <string name="order_send_success">Thành công!</string>
    <string name="order_send_success_show">Thành công</string>
    <string name="order_send_error">Lỗi khi gửi đơn hàng!</string>
    <string name="empty_cart">Vui lòng chọn món trước khi thanh toán!</string>
    <string name="ask_to_delete">Bạn muốn xóa món này?</string>
    <string name="mess_send_success">Đã gửi thành công!</string>
    <string name="mess_send_error">Gửi không thành công!</string>
    <string name="order_success">Đơn hàng của bạn đã được gửi đi!</string>

    //link hình ảnh
    <string name="slide_1">https://img.tastykitchen.vn/resize/764x-/2022/06/06/post-6-6-bf69.png</string>
    <string name="slide_2">https://stc.shopiness.vn/deal/2019/08/13/1/4/8/b/1565669977117_540.png</string>
    <string name="slide_3">https://stc.shopiness.vn/deal/2019/03/04/4/e/0/e/1551680990574_540.png</string>
    <string name="slide_4">http://mocquan.vn/wp-content/uploads/2020/11/screen-shot-2020-11-19-at-11.11.21-am.png</string>
    <string name="slide_5">https://daygiare.com/public/storage/thumb/2020/02/18/PIzza-Hut-Uu-dai-combo-an-trua-cac-ngay-trong-tuan.jpeg</string>
    <string name="title_activity_gioi_thieu_chung">GioiThieuChungActivity</string>
    <string name="nhap_lai_mat_khau">Vui lòng nhập lại mật khẩu!</string>
    <string name="mat_khau_moi">Vui lòng nhập mật khẩu mới!</string>
    <string name="none_pass">Vui lòng nhập mật khẩu!</string>
    <string name="show_password">Show password</string>
    <string name="Address">Địa chỉ</string>
    <string name="input_address">Nhập địa chỉ...</string>
    <string name="nhap_address">Vui lòng nhập địa chỉ!</string>
    <string name="search_food">Tìm kiếm món</string>
    <string name="add_comment">Thêm bình luận...</string>
    <string name="list_store">Danh sách cửa hàng</string>
    <string name="title_activity_theo_doi_don_hang">TheoDoiDonHang</string>

</resources>